20110821
	pkgin 0.5.0 in progress
	/!\ YOU WILL HAVE TO rm -rf /var/db/pkgin/* and pkgin up /!\
	One struct to rule them all (Pkglist)
	Got rid of many useless lists (speed x10, literally)
	Introduced FULLPKGNAME as db member, speed ups searches
	unique_pkg(): no more "many versions of foo", pickup newer

20110810
	Progress now shown with progressmeter from OpenSSH

20110809
	Release 0.4.2.2
	Cleaned up download.c
	SQLite upgraded to 3.7.7.1

20110802
	Release 0.4.2.1
	Fixed the "too many connexions" problem with libfetch and FTP

20110306
	Release 0.4.2
	Moving to SF.net
	Check for mark_as_automatic_installed() return code

20110301
	pkgin can now upgrade pkg_install with user's approval

20110228
	url_stat's size is declared as off_t, will be > SSIZE_MAX on
	32 bits systems. Added a fix for this.

20110227
	Added -P, print package version instead of globs in sd, srd, sfd
	Added warning for repositories with 0-lenght FILE_SIZE
	Added -V (verbosity) flag
	Moved integer flags to uint8_t

20110221
	Wiped out file.c, ftpio.c, path.c, str.c, pexec.c, pkg_io.c,
	pen.c, strsep.c, lpkg.c, iterate.c
	Inform about logging

20110207
	Replaced naive repository arch check by MACHINE_ARCH check

20110206
	Bump to SQLite 3.7.5

20110205
	Added statvfs64 support
	Redirect stderr to logfile while pkg_{add,delete}

20110204
	Feature request: -F / force-reinstall
	Feature request: PR 43049

20110130
	Merged 0.4.0 to HEAD
	MINIX patches from Gautam are now upstream
	Re-added download-only
	Makefile.in / configure.ac cleanup
	Integrated some of bapt's patches
	- chroot
	- bandwidth calculation

20110122
	pkgin 0.4.0
	SQLite "Amalgamation" version is now part of the tree,
	No more databases/sqlite3 dependency needed

20110120
	pkgin 0.3.3.4, never say "this is the last release"
	Fixed a non-critical bug: some packages were marked
	for upgrade more than once.

20110119
	pkgin 0.3.3.3, hopefully the last 0.3 release
	Double dewey match fixed, i.e. foo>=1.2.3<3.0